--- a/html/index.html
+++ b/html/index.html
@@ -31,8 +31,8 @@
                 </nav>               
             </div>
             <div class="col-md-6 offset-md-3 start">
-                <h1 class="text-center">
-                    
+                <h1 class="text-center btn btn-md">
+                    Let's Start
                 </h1>
                 
             </div>
