--- a/html/index.html
+++ b/html/index.html
@@ -31,9 +31,9 @@
                 </nav>               
             </div>
             <div class="col-md-6 offset-md-3 start">
-                <h1 class="text-center btn btn-md">
+                <a class="text-center btn btn-md" href="#">
                     Let's Start
-                </h1>
+                </a>
                 
             </div>
         </div>
