main start page finished

--- a/html/index.html
+++ b/html/index.html
@@ -36,6 +36,11 @@
                 </a>
                 
             </div>
+            
+            <footer class="navbar fixed-bottom" >
+                <div></div>
+                <p>developed by Pasindu Anuradha Perera</p>
+            </footer>
         </div>
     </div>
 
